--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -131,11 +131,10 @@ header {
 }
 
 .slide-wrapper img {
-    width: 20%; /* Adjust this percentage to control the image size */
-    height: auto; /* Maintains aspect ratio */
-    object-fit: fill; /* Keeps image centered and cropped if necessary */
-    border-radius: 8px; /* Optional: Rounded corners for styling */
-    margin: 10px; /* Optional: Space between images */
+    width: 30%;
+    object-fit: cover;
+    border-radius: 8px;
+}
 
 /* Main content styles */
 main {
