--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -138,12 +138,12 @@ header {
 
 @media (max-width: 768px) {
 .slideshow-container {
-    width: 80%;
+    width: 100%;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: ;
+    overflow: hidden;
     margin-top: 20px;
 }
 
