--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -143,7 +143,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: visible;
     margin-top: 20px;
 }
 
