--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -141,8 +141,8 @@ header {
     width: 100%;
     height: 300px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     overflow: visible;
     margin-top: 20px;
 }
